--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~primeicons/primeicons.css";
+
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+nav {
+  padding-left: 20px!important;
+}
+.logo {
+  width: 60px;
+  margin-right: 8px;
+}
+.bg-dark {
+background-color: #8e210b!important;
+}
+.contenitore {
+  padding: 16px;
+}
