--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,10 @@ background-color: #8e210b!important;
 }
 .contenitore {
   padding: 16px;
+
+}
+
+h3 {
+  font-family: "Homemade Apple", cursive;
+  font-size: 40px;
 }
