--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 nav {
-  padding-left: 20px!important;
+  padding-left: 10px!important;
 }
 .logo {
   width: 60px;
@@ -24,4 +24,5 @@ background-color: #8e210b!important;
 h3 {
   font-family: "Homemade Apple", cursive;
   font-size: 40px;
+  text-shadow: black 2px 3px 3px;
 }
