fine settima lezione

--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,1 +1,3 @@
-<h2>Da grande sarò il componente che mostra le ricette</h2>
+<h2>Le nostre ricette:</h2>
+
+<app-recipe-card [recipes]="ricette"></app-recipe-card>
