--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <img src="../assets/images/icona-cibando.png" class="logo">
       Cibando</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><i class="pi pi-globe"></i>Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="home"><i class="pi pi-globe"></i>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="pi pi-book"></i>Ricette</a>
+          <a class="nav-link"><i class="pi pi-book" routerLink="ricette"></i>Ricette</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="pi pi-envelope"></i>Contatti</a>
+          <a class="nav-link"><i class="pi pi-envelope"></i>Contatti</a>
         </li>
       </ul>
     </div>
