--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~primeicons/primeicons.css";
-
+@import "./styles/colori.scss";
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -14,7 +14,7 @@ nav {
   margin-right: 8px;
 }
 .bg-dark {
-background-color: #8e210b!important;
+background-color: $primary-color-1!important;
 }
 .contenitore {
   padding: 16px;
@@ -24,5 +24,5 @@ background-color: #8e210b!important;
 h3 {
   font-family: "Homemade Apple", cursive;
   font-size: 40px;
-  text-shadow: black 2px 3px 3px;
+  text-shadow: $secondary-color-1 2px 3px 3px;
 }
