progetto ottava lezione

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
 
 <router-outlet></router-outlet>
+
+<footer>
+  Cibando srl
+  Via Simone Martini, 100
+  cap 00100
+</footer>
