--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="home"><i class="pi pi-globe"></i>Home</a>
+          <a class="nav-link" aria-current="page" routerLink="home"><i class="pi pi-globe"></i>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><i class="pi pi-book" routerLink="ricette"></i>Ricette</a>
+          <a class="nav-link" routerLink="ricette"><i class="pi pi-book"></i>Ricette</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"><i class="pi pi-envelope"></i>Contatti</a>
